--- a/translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json
@@ -29,7 +29,7 @@
   "dn10:1.7.1": "„Student, es ist, wenn da ein Klargewordener in der Welt erscheint, vollendet, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet. ",
   "dn10:1.7.2": "Er hat diese Welt – mit ihren Göttern, Māras und Brahmās, mit dieser Bevölkerung mit ihren Asketen und Brahmanen, Göttern und Menschen – durch eigene Einsicht erkannt und erklärt sie anderen. ",
   "dn10:1.7.3": "Er lehrt den Dhamma, der am Anfang gut, in der Mitte gut und am Ende gut ist, bedeutsam und gut ausgedrückt. Und er legt eine geistliche Übung dar, die in sich geschlossen und rein ist. ",
-  "dn10:1.8.1": "Ein Hausbesitzer hört diese Lehre, oder die Tochter eines Hausbesitzers oder jemand, der in einer guten Familie wiedergeboren ist. ",
+  "dn10:1.8.1": "Ein Hausbesitzer hört diese Lehre, oder das Kind eines Hausbesitzers oder jemand, der in einer guten Familie wiedergeboren ist. ",
   "dn10:1.8.2": "Die Person fasst Vertrauen zum Klargewordenen ",
   "dn10:1.8.3": "und überlegt: ",
   "dn10:1.8.4": "‚Das Leben in einem Haus ist eng und schmutzig, aber das Leben von jemand, der fortgezogen ist, ist weit offen. ",
