--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -705,7 +705,7 @@
   "sn-name:2077.sn56-dutiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2078.sn56.71": "Lebende Geschöpfe töten ",
   "sn-name:2079.sn56.72": "Stehlen ",
-  "sn-name:2080.sn56.73": "Sexuelles Fehlverhalten ",
+  "sn-name:2080.sn56.73": "Sexuelle Verfehlungen ",
   "sn-name:2081.sn56.74": "Lügen ",
   "sn-name:2083.sn56.76": "Harte Rede ",
   "sn-name:2084.sn56.77": "Sinnlose Rede ",
