--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.78_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn56.78:0.1": "Verbundene Lehrreden 56 ",
   "sn56.78:0.2": "8. Abgekürzte Texte über rohes Getreide ",
-  "sn56.78:0.3": "78. Pflanzen "
+  "sn56.78:0.3": "78. Pflanzen ",
+  "sn56.78:1.1": "„… ebenso gibt es wenige Lebewesen, die es unterlassen, Pflanzen und Samen zu beschädigen; viele hingegen unterlassen es nicht. …“ "
 }
