--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -712,6 +712,7 @@
   "sn-name:2084.sn56.77": "Sinnlose Rede ",
   "sn-name:2085.sn56.78": "Pflanzen ",
   "sn-name:2086.sn56.79": "Essen zur falschen Zeit ",
+  "sn-name:2087.sn56.80": "Düfte und Make-up ",
   "sn-name:2088.sn56-tatiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2099.sn56-catutthaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2106.sn56-pancagatipeyyalavagga": "Abgekürzte Texte über fünf Bestimmungsorte "
