--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.80_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
   "sn56.80:0.1": "Verbundene Lehrreden 56 ",
   "sn56.80:0.2": "8. Abgekürzte Texte über rohes Getreide ",
-  "sn56.80:0.3": "80. Düfte und Make-up "
+  "sn56.80:0.3": "80. Parfüm und Make-up "
 }
