--- a/translation/de/site/an-introduction-bodhi_translation-de-site.json
+++ b/translation/de/site/an-introduction-bodhi_translation-de-site.json
@@ -3,7 +3,7 @@
   "an-introduction-bodhi:2": "Bhikkhu Bodhi 2012 ",
   "an-introduction-bodhi:3": "<a href='#item1'>Der Buddha im Aṅguttara-Nikāya</a> ",
   "an-introduction-bodhi:4": "<a href='#item2'>Der Dhamma und die Schulung</a> ",
-  "an-introduction-bodhi:5": "<a href='#item3'>Das sich verändernde Kaleidoskop der Erfahrung</a> ",
+  "an-introduction-bodhi:5": "<a href='#item3'>Das Kaleidoskop der Erfahrung: ständig in Bewegung</a> ",
   "an-introduction-bodhi:6": "<a href='#item4'>Eine harmonische Hausgemeinschaft führen</a> ",
   "an-introduction-bodhi:7": "<a href='#item5'>Der Weg, der nach oben führt</a> ",
   "an-introduction-bodhi:8": "<a href='#item6'>Den Zauber der Welt auflösen</a> ",
