--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.81_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.81:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.81:0.2": "9. Abgekürzte Texte über rohes Getreide "
+  "sn56.81:0.2": "9. Abgekürzte Texte über rohes Getreide ",
+  "sn56.81:0.3": "81. Tanz und Gesang "
 }
