--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.81_translation-de-sabbamitta.json
@@ -3,5 +3,5 @@
   "sn56.81:0.2": "9. Abgekürzte Texte über rohes Getreide ",
   "sn56.81:0.3": "81. Tanz und Gesang ",
   "sn56.81:1.1": "… ",
-  "sn56.81:1.2": "„… ebenso gibt es wenige Lebewesen, die Tanz, Gesang, Musik und den Besuch von Shows unterlassen; viele hingegen unterlassen es nicht. …“ "
+  "sn56.81:1.2": "„… ebenso gibt es wenige Lebewesen, die Tanz, Gesang, Musik und den Besuch von Shows unterlassen; viele hingegen unterlassen diese nicht. …“ "
 }
