--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -600,6 +600,6 @@
   "dn34:2.1.152": "This teaching is for the contented. This teaching is not for the discontented.XXX",
   "dn34:2.1.153": "This teaching is for the disentangled. This teaching is not for one who loves company.XXXX",
   "dn34:2.1.154": "This teaching is for one of resolute energy. This teaching is not for the lazy.XXX",
-  "dn34:2.1.155": "This teaching is for one whose mindfulness is established. This teaching is not for the absent minded.XXX",
+  "dn34:2.1.155": "This teaching is for one whose mindfulness is established. This teaching is not for the absent minded.",
   "dn34:2.1.156": "This teaching is for the settled. This teaching is not for the unsettled."
 }
