--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -597,7 +597,7 @@
   "dn34:2.1.149": "What are the eight things that are to be encouraged?",
   "dn34:2.1.150": "The eight thoughts of a great man—",
   "dn34:2.1.151": "This teaching is for one of few longings, not for one of many longings. (XXXCOULD BE THAT OR WHAT FOLLOWS YEAH?XXX) This is a teaching of fewness of wishes, not a teaching of myriad wishes.",
-  "dn34:2.1.152": "This teaching is for the contented. This teaching is not for the discontented.",
+  "dn34:2.1.152": "This teaching is for the contented, not for the discontented.",
   "dn34:2.1.153": "This teaching is for the disentangled. This teaching is not for one who loves company.",
   "dn34:2.1.154": "This teaching is for one of resolute energy. This teaching is not for the lazy.",
   "dn34:2.1.155": "This teaching is for one whose mindfulness is established. This teaching is not for the absent minded.",
