--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -602,5 +602,6 @@
   "dn34:2.1.154": "This teaching is for one of resolute energy, not for the lazy.",
   "dn34:2.1.155": "This teaching is for one whose mindfulness is established, not for the absent minded.",
   "dn34:2.1.156": "This teaching is for the settled, not for the unsettled.",
-  "dn34:2.1.157": "This teaching is for the discerning, not for the undiscerning."
+  "dn34:2.1.157": "This teaching is for the discerning, not for the undiscerning.",
+  "dn34:2.1.158": "This teaching is for the uncomplicated, not for one who loves complication."
 }
