--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.84_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.84:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.84:0.2": "9. Abgekürzte Texte über rohes Getreide "
+  "sn56.84:0.2": "9. Abgekürzte Texte über rohes Getreide ",
+  "sn56.84:0.3": "84. Rohes Getreide "
 }
