--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -717,6 +717,7 @@
   "sn-name:2089.sn56.81": "Tanz und Gesang ",
   "sn-name:2090.sn56.82": "Hohe Betten ",
   "sn-name:2091.sn56.83": "Gold und Geld ",
+  "sn-name:2092.sn56.84": "Rohes Getreide ",
   "sn-name:2099.sn56-catutthaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2106.sn56-pancagatipeyyalavagga": "Abgekürzte Texte über fünf Bestimmungsorte "
 }
