--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -161,7 +161,7 @@
   "dn34:1.5.37": "What are the four things that are to be understood fully?",
   "dn34:1.5.38": "The four Noble Truths—",
   "dn34:1.5.39": "The Noble Truth of suffering; the Noble Truth of the origin of suffering; the Noble Truth of the end of suffering; the Noble Truth that is the path that goes to the end of suffering.",
-  "dn34:1.5.40": "These are the four things that are to be understood fully?",
+  "dn34:1.5.40": "These are the four things that are to be understood fully.",
   "dn34:1.5.41": "What are the four things that are to be seen for oneself?",
   "dn34:1.5.42": "The four fruits of recluseship—",
   "dn34:1.5.43": "The fruit of stream-entry; the fruit of once-returning; the fruit of non-returning; the fruit of arahantship.",
