--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -351,7 +351,7 @@
   "dn34:1.7.75": "Having tasted a flavor with the tongue ...",
   "dn34:1.7.76": "Having felt a touch via the body ...",
   "dn34:1.7.77": "Having cognized a thought with the mind, he is not elated nor dejected, but abides stoically composed, mindful, and integrally aware.",
-  "dn34:1.7.78": "These are the six things that are to be encouraged?",
+  "dn34:1.7.78": "These are the six things that are to be encouraged.",
   "dn34:1.7.79": "What are the six things that are to be understood fully?",
   "dn34:1.7.80": "The six unsurpassables—",
   "dn34:1.7.81": " Unsurpassable sight; unsurpassable sound; unsurpassable gain; unsurpassable training; unsurpassable service; unsurpassable recollection.",
