--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -719,6 +719,7 @@
   "sn-name:2091.sn56.83": "Gold und Geld ",
   "sn-name:2092.sn56.84": "Rohes Getreide ",
   "sn-name:2093.sn56.85": "Rohes Fleisch ",
+  "sn-name:2094.sn56.86": "Frauen und Mädchen ",
   "sn-name:2099.sn56-catutthaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2106.sn56-pancagatipeyyalavagga": "Abgekürzte Texte über fünf Bestimmungsorte "
 }
