--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.89_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.89:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.89:0.2": "9. Abgekürzte Texte über rohes Getreide "
+  "sn56.89:0.2": "9. Abgekürzte Texte über rohes Getreide ",
+  "sn56.89:0.3": "89. Hühner und Schweine "
 }
