--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.90_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.90_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn56.90:0.1": "Verbundene Lehrreden 56 "
+  "sn56.90:0.1": "Verbundene Lehrreden 56 ",
+  "sn56.90:0.2": "9. Abgekürzte Texte über rohes Getreide "
 }
