--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.92_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.92_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.92:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.92:0.2": "10. Abgekürzte Texte über rohes Getreide "
+  "sn56.92:0.2": "10. Abgekürzte Texte über rohes Getreide ",
+  "sn56.92:0.3": "92. Kaufen und Verkaufen "
 }
