--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.96-101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.96-101_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn56.96-101:0.2": "10. Abgekürzte Texte über rohes Getreide ",
   "sn56.96-101:0.3": "96–101. Verstümmelung usw. ",
   "sn56.96-101:1.1": "„… ebenso gibt es wenige Lebewesen, die Verstümmelung, Mord, Entführung, Räuberei, Plünderung und Gewalt unterlassen; viele hingegen unterlassen diese Dinge nicht. …“ ",
-  "sn56.96-101:1.2": "Und warum nicht? "
+  "sn56.96-101:1.2": "Und warum nicht? ",
+  "sn56.96-101:1.3": "Weil sie die vier edlen Wahrheiten nicht gesehen haben. "
 }
