--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.96-101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.96-101_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn56.96-101:1.1": "„… ebenso gibt es wenige Lebewesen, die Verstümmelung, Mord, Entführung, Räuberei, Plünderung und Gewalt unterlassen; viele hingegen unterlassen diese Dinge nicht. …“ ",
   "sn56.96-101:1.2": "Und warum nicht? ",
   "sn56.96-101:1.3": "Weil sie die vier edlen Wahrheiten nicht gesehen haben. ",
-  "sn56.96-101:1.4": "Welche vier? "
+  "sn56.96-101:1.4": "Welche vier? ",
+  "sn56.96-101:1.5": "Die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt. "
 }
