--- a/translation/lt/piyadassi/sutta/sn/sn36/sn36.6_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn36/sn36.6_translation-lt-piyadassi.json
@@ -15,7 +15,7 @@
   "sn36.6:1.11": "Lygiai gi taip, vienuoliai, kai neapmokytas eilinis žmogus pajaučia nemalonų jausmo toną, jis liūdi, kankinasi, rauda, mušasi į krūtinę ir tampa sumišęs.",
   "sn36.6:1.12": "Jis jaučia du jausmus:",
   "sn36.6:1.13": "kūnišką ir protinį.",
-  "sn36.6:1.14": "Pajautęs tą patį nemalonų jausmo toną, jis juo bjaurisi.",
+  "sn36.6:1.14": "Pajautęs tą patį nemalonų jausmo toną, jis juo bjauriasi.",
   "sn36.6:1.15": "Kai jis bjaurisi skausmingu jausmu, už to glūdi giluminis polinkis į bjaurėjimąsi skausmingu jausmu.",
   "sn36.6:1.16": "Pajautęs nemalonų jausmo toną, jis ieško džiaugsmo jusliniuose malonumuose.",
   "sn36.6:1.17": "Kokia yra to priežastis?",
