--- a/translation/lt/piyadassi/sutta/sn/sn36/sn36.6_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn36/sn36.6_translation-lt-piyadassi.json
@@ -16,7 +16,7 @@
   "sn36.6:1.12": "Jis jaučia du jausmus:",
   "sn36.6:1.13": "kūnišką ir protinį.",
   "sn36.6:1.14": "Pajautęs tą patį nemalonų jausmo toną, jis juo bjauriasi.",
-  "sn36.6:1.15": "Kai jis bjaurisi skausmingu jausmu, už to glūdi giluminis polinkis į bjaurėjimąsi skausmingu jausmu.",
+  "sn36.6:1.15": "Kai jis bjauriasi skausmingu jausmu, už to glūdi giluminis polinkis į bjaurėjimąsi skausmingu jausmu.",
   "sn36.6:1.16": "Pajautęs nemalonų jausmo toną, jis ieško džiaugsmo jusliniuose malonumuose.",
   "sn36.6:1.17": "Kokia yra to priežastis?",
   "sn36.6:1.18": "Todėl, kad neapmokytas eilinis žmogus nesupranta kaip kitaip, ne per juslinį malonumą, pabėgti nuo skausmingo jausmo.",
