--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.102_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.102_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.102:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.102:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte "
+  "sn56.102:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte ",
+  "sn56.102:0.3": "102. Als Menschen sterben und in der Hölle wiedergeboren werden "
 }
