--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -731,5 +731,6 @@
   "sn-name:2103.sn56.94": "Falsche Maße ",
   "sn-name:2104.sn56.95": "Bestechung ",
   "sn-name:2105.sn56.96-101": "Verstümmelung usw. ",
-  "sn-name:2106.sn56-pancagatipeyyalavagga": "Abgekürzte Texte über fünf Bestimmungsorte "
+  "sn-name:2106.sn56-pancagatipeyyalavagga": "Abgekürzte Texte über fünf Bestimmungsorte ",
+  "sn-name:2107.sn56.102": "Als Menschen sterben und in der Hölle wiedergeboren werden "
 }
