--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.102_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.102_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn56.102:0.3": "102. Als Menschen sterben und in der Hölle wiedergeboren werden ",
   "sn56.102:1.1": "Da nahm der Buddha ein wenig Erde mit seinem Fingernagel auf und wandte sich an die Mönche und Nonnen: ",
   "sn56.102:1.2": "„Was meint ihr, Mönche und Nonnen? ",
-  "sn56.102:1.3": "Was ist mehr: das bisschen Erde unter meinem Fingernagel oder diese große Erde?“ "
+  "sn56.102:1.3": "Was ist mehr: das bisschen Erde unter meinem Fingernagel oder diese große Erde?“ ",
+  "sn56.102:1.4": "„Herr, die große Erde ist sicherlich mehr. "
 }
