--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.102_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.102_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn56.102:1.1": "Da nahm der Buddha ein wenig Erde mit seinem Fingernagel auf und wandte sich an die Mönche und Nonnen: ",
   "sn56.102:1.2": "„Was meint ihr, Mönche und Nonnen? ",
   "sn56.102:1.3": "Was ist mehr: das bisschen Erde unter meinem Fingernagel oder diese große Erde?“ ",
-  "sn56.102:1.4": "„Herr, die große Erde ist sicherlich mehr. "
+  "sn56.102:1.4": "„Herr, die große Erde ist sicherlich mehr. ",
+  "sn56.102:1.6": "Das bisschen Erde unter deinem Fingernagel ist winzig. "
 }
