--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -44,5 +44,6 @@
   "mn21:7.4": "‘Io mangio il mio cibo in una seduta al giorno.",
   "mn21:7.5": "Facendo così, trovo di essere sano e sto bene, sono agile, forte, e comodo.",
   "mn21:7.6": "Anche voi dovreste mangiare il vostro cibo in una seduta al giorno.",
-  "mn21:7.7": "Facendo così, troverete di essere sani e di stare bene, di essere agili, forti, e comodi.’"
+  "mn21:7.7": "Facendo così, troverete di essere sani e di stare bene, di essere agili, forti, e comodi.’",
+  "mn21:7.8": "Non avevo bisogno di continuare ad istruire quei mendicanti;"
 }
