--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -45,5 +45,6 @@
   "mn21:7.5": "Facendo così, trovo di essere sano e sto bene, sono agile, forte, e comodo.",
   "mn21:7.6": "Anche voi dovreste mangiare il vostro cibo in una seduta al giorno.",
   "mn21:7.7": "Facendo così, troverete di essere sani e di stare bene, di essere agili, forti, e comodi.’",
-  "mn21:7.8": "Non avevo bisogno di continuare ad istruire quei mendicanti;"
+  "mn21:7.8": "Non avevo bisogno di continuare ad istruire quei mendicanti;",
+  "mn21:7.9": "Dovevo solo incitare la loro presenza mentale."
 }
