--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -47,5 +47,6 @@
   "mn21:7.7": "Facendo così, troverete di essere sani e di stare bene, di essere agili, forti, e comodi.’",
   "mn21:7.8": "Non avevo bisogno di continuare ad istruire quei mendicanti;",
   "mn21:7.9": "Dovevo solo incitare la loro presenza mentale.",
-  "mn21:7.10": "Immaginate un carro imbrigliato a dei purosangue fermo ad un incrocio, con il pungolo pronto."
+  "mn21:7.10": "Immaginate un carro imbrigliato a dei purosangue fermo ad un incrocio, con il pungolo pronto.",
+  "mn21:7.11": "Un abile addestratore di cavalli, un’auriga esperto, monterebbe il carro, prendendo le redini nella mano destra ed il pungolo nella sinistra. "
 }
