--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -52,5 +52,6 @@
   "mn21:7.12": "Allo stesso modo, io non avevo bisogno di continuare ad istruire quei mendicanti;",
   "mn21:7.13": "Dovevo solo incitare la loro presenza mentale.",
   "mn21:7.14": "Quindi, mendicanti, anche voi dovete abbandonare ciò che è malsano e dedicarvi alle qualità sane.",
-  "mn21:7.15": "In questo modo raggiungerete crescita, miglioramento, e maturità in questo insegnamento e addestramento."
+  "mn21:7.15": "In questo modo raggiungerete crescita, miglioramento, e maturità in questo insegnamento e addestramento.",
+  "mn21:8.1": "Immaginate che non lontano da una cittadina o un villaggio ci sia un grande bosco di alberi di Sal"
 }
